Python-RSA changelog
========================================

Version 3.0 - in development
----------------------------------------

- Changed the meaning of the keysize to mean the size of ``n`` rather than
  the size of both ``p`` and ``q``. This is the common interpretation of
  RSA keysize. To get the old behaviour, double the keysize when generating a
  new key.
  
- Ensured that newkey(nbits) results in a ``n`` that can be stored in that many
  bits (it used to overflow).

- Including 'n' in the private key

- Added a lot of doctests

- Added random-padded encryption and decryption using PKCS#1 version 1.5

- Added hash-based signatures using PKCS#1v1.5

- Modeling private and public key as real objects rather than dicts.

Version 2.0
----------------------------------------
